--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,11 @@ uuid = "ab9d97fe-b3f0-4ed5-83d9-5747a4381b0c"
 author = "Júlio Hoffimann <julio.hoffimann@gmail.com>"
 version = "0.1.0"
 
+[deps]
+Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+
 [compat]
+Tables = "v0.2"
 julia = "1.2"
 
 [extras]
